--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-syntax-highlighter": "^15.6.1",
     "three": "^0.174.0"
   },
   "devDependencies": {
